d253bb86-da64-4475-8876-5452079f210e/force-app/main/default/objects/LQW_Lead_Question_Response__c/LQW_Lead_Question_Response__c.object-meta.xml
<CustomObject>
            <description>Junction object that stores individual responses from sales representatives to qualification questions for each lead. Tracks Yes/No responses with timestamps for audit trail and supports partial completion of the qualification process.</description>
            <label>Lead Question Response</label>
            <nameField>
                <displayFormat>LQR-{00000}</displayFormat>
                <label>Response Number</label>
                <type>AutoNumber</type>
            </nameField>
            <pluralLabel>Lead Question Responses</pluralLabel>
            <sharingModel>ReadWrite</sharingModel>
        </CustomObject>