d253bb86-da64-4475-8876-5452079f210e/force-app/main/default/objects/LQW_Lead_Question_Response__c/fields/LQW_Lead__c.field-meta.xml
<CustomField>
            <fullName>LQW_Lead__c</fullName>
            <label>Lead</label>
            <description>The lead record associated with this qualification response</description>
            <type>Lookup</type>
            <referenceTo>Lead</referenceTo>
            <relationshipLabel>Lead Question Responses</relationshipLabel>
            <relationshipName>LQW_Lead_Question_Responses</relationshipName>
            <deleteConstraint>SetNull</deleteConstraint>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>