d253bb86-da64-4475-8876-5452079f210e/force-app/main/default/objects/LQW_Lead_Question_Response__c/fields/LQW_Question__c.field-meta.xml
<CustomField>
            <fullName>LQW_Question__c</fullName>
            <label>Question</label>
            <description>The qualification question being answered in this response</description>
            <type>Lookup</type>
            <required>true</required>
            <referenceTo>LQW_Qualification_Question__c</referenceTo>
            <relationshipLabel>Lead Responses</relationshipLabel>
            <relationshipName>LQW_Lead_Responses</relationshipName>
            <deleteConstraint>Restrict</deleteConstraint>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>