d253bb86-da64-4475-8876-5452079f210e/force-app/main/default/objects/LQW_Lead_Question_Response__c/fields/LQW_Question_List__c.field-meta.xml
<CustomField>
            <fullName>LQW_Question_List__c</fullName>
            <label>Question List</label>
            <description>Historical snapshot of which question list was active when this response was saved. Enables response history tracking and allows users to see which questions were answered under which question list, even after the lead&#x27;s assigned question list changes.</description>
            <type>Lookup</type>
            <referenceTo>LQW_Question_List__c</referenceTo>
            <relationshipLabel>Lead Question Responses</relationshipLabel>
            <relationshipName>LQW_Lead_Question_Responses</relationshipName>
            <deleteConstraint>SetNull</deleteConstraint>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>