d253bb86-da64-4475-8876-5452079f210e/force-app/main/default/objects/LQW_Lead_Question_Response__c/fields/LQW_Response__c.field-meta.xml
<CustomField>
            <fullName>LQW_Response__c</fullName>
            <label>Response</label>
            <description>The Yes or No response to the qualification question</description>
            <type>Picklist</type>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
            
            <valueSet>
                <restricted>true</restricted>
                <valueSetDefinition>
                    
                    <value>
                        <fullName>Yes</fullName>
                    </value>
                    
                    <value>
                        <fullName>No</fullName>
                    </value>
                    
                </valueSetDefinition>
            </valueSet>
        </CustomField>