d253bb86-da64-4475-8876-5452079f210e/force-app/main/default/objects/LQW_Lead_Question_Response__c/fields/LQW_Response_Date__c.field-meta.xml
<CustomField>
            <fullName>LQW_Response_Date__c</fullName>
            <label>Response Date</label>
            <description>Date and time when this response was first created</description>
            <type>DateTime</type>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>