d253bb86-da64-4475-8876-5452079f210e/force-app/main/default/objects/LQW_Lead_Question_Response__c/listViews/LQW_All_Lead_Responses.listView-meta.xml
<ListView>
            <fullName>LQW_All_Lead_Responses</fullName>
            <label>All Lead Responses</label>
            <filterScope>Everything</filterScope>
            
            <columns>NAME</columns>
            
            <columns>LQW_Lead__c</columns>
            
            <columns>LQW_Question__c</columns>
            
            <columns>LQW_Response__c</columns>
            
            <columns>LQW_Response_Date__c</columns>
            
            <columns>LQW_Last_Modified_Date__c</columns>
            
        </ListView>